# deepagent-agentcore

./: .gitattributes  .gitignore  README.md  apply_masking.sh  pyrightconfig.json
.github/: .gitignore
.github/workflows/: deploy-image.yml  deploy-infra.yml  destroy-infra.yml
clinical-extraction/: .env.example  deepagent_langfuse.py  deepagent_pathology.py  langchain_langfuse.py  pyproject.toml  vision_pathology.py
clinical-extraction/src/schemas/: pathology.py  vcf.py
langgraph-agentcore/agentcore/: .gitignore  agentcore.json  aws-targets.json
langgraph-agentcore/agentcore/.cli/: deployed-state.json
langgraph-agentcore/agentcore/cdk/: package-lock.json
langgraph-agentcore/app/agent/: .gitignore  main.py  observability.py  pyproject.toml
langgraph-agentcore/app/agent/model/: load.py
langgraph-agentcore/app/ui/: README.md  index.html  package.json  tsconfig.tsbuildinfo
langgraph-agentcore/app/ui/src/: App.tsx  agui.ts  styles.css  useAgent.ts
restaurant-finder-api/: .env.example  .gitignore  Dockerfile  Makefile  agentcore.py  pyproject.toml
restaurant-finder-api/src/: config.py  main.py
restaurant-finder-api/src/application/orchestrator/: __init__.py  streaming.py
restaurant-finder-api/src/application/orchestrator/workflow/: __init__.py  chains.py  edges.py  graph.py  nodes.py  state.py  tools.py
restaurant-finder-api/src/application/orchestrator/workflow/agents/: __init__.py  restaurant_data_agent.py  restaurant_explorer_agent.py  restaurant_research_agent.py
restaurant-finder-api/src/domain/: __init__.py  models.py  prompts.py
restaurant-finder-api/src/evaluation/: __init__.py  client.py  on_demand.py  online.py  runner.py  test_cases.py
restaurant-finder-api/src/evaluation/metrics/: response_quality.json  restaurant_recommendation_quality.json  safety_compliance.json
restaurant-finder-api/src/infrastructure/: __init__.py  api.py  browser.py  guardrails.py  mcp_client.py  memory.py  model.py  observability.py  prompt_manager.py  startup.py  streaming.py
restaurant-finder-infra/: .gitignore  README.md  package-lock.json  package.json
restaurant-finder-infra/lib/stacks/: agentcore-stack.ts  ecr-stack.ts  index.ts
restaurant-finder-infra/mcp/lambda/: .gitignore  handler.py  requirements.txt  tools_schema.json
restaurant-finder-ui/: .env.example  .gitignore  app.py  pyproject.toml
vcf-extraction/: .env.example  docker-compose.langfuse.yml  interceptor.py  pipeline.py  pyproject.toml  schema.py
