[project]
name = "vcf-extraction"
version = "0.1.0"
description = "VCF variant extraction pipeline using Deepagent and AWS AgentCore"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.37",
    "deepagents>=0.1.0",
    "langfuse>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
